src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirect_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirect_StringErrorContext.class */
public final class ARBMultiDrawIndirect_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglMultiDrawArraysIndirect(IJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawArraysIndirect(ILjava/nio/ByteBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawArraysIndirect(IJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawArraysIndirect(ILjava/nio/IntBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("nglMultiDrawElementsIndirect(IIJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawElementsIndirect(IILjava/nio/ByteBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawElementsIndirect(IIJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawElementsIndirect(IILjava/nio/IntBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawArraysIndirect(I[III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        methods.put("glMultiDrawElementsIndirect(II[III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBMultiDrawIndirectErrorContext");
        return methods;
    }
}
